; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/mediatek/mt7601u/extr_tx.c_mt7601u_tx_pktid_dec.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/mediatek/mt7601u/extr_tx.c_mt7601u_tx_pktid_dec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mt7601u_dev = type { i32 }
%struct.mt76_tx_status = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mt7601u_dev*, %struct.mt76_tx_status*)* @mt7601u_tx_pktid_dec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mt7601u_tx_pktid_dec(%struct.mt7601u_dev* %0, %struct.mt76_tx_status* %1) #0 {
  %3 = alloca %struct.mt7601u_dev*, align 8
  %4 = alloca %struct.mt76_tx_status*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.mt7601u_dev* %0, %struct.mt7601u_dev** %3, align 8
  store %struct.mt76_tx_status* %1, %struct.mt76_tx_status** %4, align 8
  %7 = load %struct.mt76_tx_status*, %struct.mt76_tx_status** %4, align 8
  %8 = getelementptr inbounds %struct.mt76_tx_status, %struct.mt76_tx_status* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %5, align 4
  %10 = load %struct.mt76_tx_status*, %struct.mt76_tx_status** %4, align 8
  %11 = getelementptr inbounds %struct.mt76_tx_status, %struct.mt76_tx_status* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = and i32 %12, 7
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %5, align 4
  %15 = sub nsw i32 %14, 1
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* %5, align 4
  %17 = icmp sgt i32 %16, 7
  br i1 %17, label %18, label %30

18:                                               ; preds = %2
  %19 = load %struct.mt76_tx_status*, %struct.mt76_tx_status** %4, align 8
  %20 = getelementptr inbounds %struct.mt76_tx_status, %struct.mt76_tx_status* %19, i32 0, i32 2
  store i32 1, i32* %20, align 4
  %21 = load i32, i32* %5, align 4
  %22 = sub nsw i32 %21, 8
  store i32 %22, i32* %5, align 4
  %23 = load i32, i32* %5, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %29, label %25

25:                                               ; preds = %18
  %26 = load i32, i32* %6, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %25
  store i32 7, i32* %5, align 4
  br label %29

29:                                               ; preds = %28, %25, %18
  br label %30

30:                                               ; preds = %29, %2
  %31 = load i32, i32* %5, align 4
  %32 = load i32, i32* %6, align 4
  %33 = sub nsw i32 %31, %32
  %34 = load %struct.mt76_tx_status*, %struct.mt76_tx_status** %4, align 8
  %35 = getelementptr inbounds %struct.mt76_tx_status, %struct.mt76_tx_status* %34, i32 0, i32 3
  store i32 %33, i32* %35, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
